<resources>
    <string name="app_name">Activ Gold Lombard</string>
    <string name="main_txt">Главная</string>
    <string name="help_txt">Помощь</string>
    <string name="map_txt">Карта</string>
    <string name="others_txt">Другие</string>
    <string name="my_txt">Я</string>
    <string name="pre">1. Фото удостоворение личности с обоих сторон <br />2. Фото себя с удостовернием личности \n3. Фото ваших ювелирных изделий по отдельности с указанием проб </string>
    <string name="activ_gold_lombard">Activ Gold Lombard</string>
    <string name="FIO">Ф.И.О</string>
    <string name="send">Отправить</string>
    <string name="upload_photo">Загрузить фотографии</string>
    <string name="address">Адрес</string>
    <string name="specify_city">Укажите Город</string>
    <string name="phone_number">Номер телефона</string>
    <string name="logo">Logo</string>
    <string name="upload_photos">Upload photos</string>
    <string name="Vvedite_email">Введите свою электронную почту</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="zabyli_parol">Забыли пароль?</string>
    <string name="voiti">Войти</string>
    <string name="net_account">Нет аккаунта?</string>
    <string name="zaregistriruites">Зарегистрируйтесь</string>
    <string name="est_account">Уже есть аккаунт?</string>
    <string name="voidite">Войдите</string>
    <string name="sozdat">Создать</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="username">Username</string>
    <string name="registrasia">Регистрация</string>
    <string name="zapolnite_vse_polya">Заполните все поля, чтобы создать аккаунт</string>
    <string name="horizontal_line">Horizontal line</string>
    <string name="poschitaem">Посчитаем ?</string>
    <string name="londonfix_5_06_04_2021">LondonFix -5% 06.04.2021</string>
    <string name="au999_n_23243_t">AU999 \n 23243 T</string>
    <string name="au750_n17434_t">AU750 \n17434 T</string>
    <string name="au585_n_13598_t">AU585 \n 13598 T</string>
    <string name="proba_zolota">Проба золота</string>
    <string name="au585">AU585</string>
    <string name="ves_izdelia">Вес изделия, грамм</string>
    <string name="_0_gr">0.0 гр</string>
    <string name="srok_zaima">Срок займа, дней</string>
    <string name="_1_den">1 день</string>
    <string name="summa_na_ruki">Сумма на руки</string>
    <string name="summa_k_vozvratu">Сумма к возврату</string>
    <string name="_0_tg">0 тг</string>
    <string name="moi_zaimy">Мои Займы</string>
    <string name="zalogovyi_bilet">Залоговый билет №</string>
    <string name="garant_srok">Гарантированный срок:</string>
    <string name="ostatok_summy">Остаток суммы займа:</string>
    <string name="tenge">Tenge</string>
    <string name="procenty">Проценты к оплате:</string>
    <string name="oplachivaiy">Оплачиваю за продление</string>
    <string name="oplatit">Оплатить</string>
    <string name="_0">0</string>
    <string name="epochta">Электронная почта</string>
    <string name="parol">Пароль</string>
    <string name="uname">Имя пользователя</string>
    <string name="pod_parol">Подтвердите пароль</string>
    <string name="sign_out">Sign out</string>
    <string name="reset_parol">Поменять пароль</string>
    <string name="vspomnili_parol">Вспомнили пароль?</string>
    <string name="oformlenie_zaima">Попробуйте заказать услугу оформления займа на дом</string>
    <string name="uslovia_lombarda">Ознакомится с условиями ломбарда</string>
    <string name="pravila_lombarda">Ознакомится с правилами ломбарда</string>
    <string name="pravila">Правила</string>
    <string name="benefits">Benefits</string>
    <string name="required_docs">Требуемые документы для выезной оптравки домой:</string>
    <string name="ostavit_zayavku">Оставить заявку</string>
    <string name="selfie">Selfie</string>
    <string name="primer">Пример по отправки документов</string>
    <string name="kz">KZ</string>
    <string name="_2000_00">2000.00</string>
    <string name="_5599_0000_0000_0000">5599 0000 0000 0000</string>
    <string name="card_number">Номер карты</string>
    <string name="owner">Держатель</string>
    <string name="jone_doe">Jone Doe</string>
    <string name="expiry_date">Действительна до</string>
    <string name="_09_29">09/29</string>
    <string name="code">* * *</string>
    <string name="example_email_com">example@email.com</string>
    <string name="pay">Оплатить</string>
    <string name="back">Назад</string>
    <string-array name="extension_days">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
    </string-array>

    <string-array name="extension_sample">
        <item>AU999</item>
        <item>AU958</item>
        <item>AU916</item>
        <item>AU875</item>
        <item>AU750</item>
        <item>AU585</item>
        <item>AU500</item>
        <item>AU375</item>
        <item>AU333</item>
        <item>AU---</item>
    </string-array>
    <string name="google_maps_key">AIzaSyA9Y6utdsAlyge4RG6aSoo5H46Lil_B-aU</string>
    <string name="ok">Ок</string>
    <string name="help">Help</string>
    <string name="license">License</string>
    <string name="paid">Paid</string>
    <string name="spasibo">Спасибо!</string>
    <string name="vash_zaim">Ваш займ</string>
    <string name="oplachen">Успешно оплачен</string>
    <string name="dannye_lombarda">Данные ломбарда</string>
    <string name="bin">BIN 191240026634</string>
    <string name="phone">87087443777</string>
    <string name="office">Офис г. Нурсултан</string>
    <string name="dannye_po_oplate">Данные по оплате</string>
    <string name="sum">Сумма</string>
    <string name="commission">Комиссия</string>
    <string name="total">Итого</string>
    <string name="_7830">7830</string>
    <string name="_0_00">0.00</string>
</resources>